--- a/gui_2/src/renderer/index.ejs
+++ b/gui_2/src/renderer/index.ejs
@@ -6,7 +6,8 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>Hello Electron React!</title>
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <title>Oncoreport</title>
   </head>
   <body>
     <div id="root"></div>
